# template-stuff

./: .gitignore  CMakeLists.txt  README.md
include/: is_detected.hpp
include/HPM/: .for_each.hpp.swp  buffer.hpp  for_each.hpp  mesh.hpp
src/: .main.cpp.swp  main.cpp
